--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,30 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;600;700&family=Stick+No+Bills:wght@400;600;700&display=swap');
+@import url('./placeSprites.css');
+@import url('./cardTypes.css');
+@import url('./types.css');
+@import url('./placeSprites.css');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* HEADER */
+html{
+    --cardBorderRadiusType: 60px;
+    --cardWidthTypw:  120%;
+    --carBorderType: 1.5px inset ;
+    --nameFont: 'Stick No Bills', sans-serif;
+    --regularFont:'Chakra Petch', sans-serif;
+}
 
+/*-------------------- HEADER ------------------------*/
 
+body{
+    
+    font-family: var(--regularFont);
+}
 
 body > header {
     padding: 10px;
@@ -28,7 +46,7 @@ body > header {
     cursor: pointer;
 }
 
-/* MAIN */
+/* -------------------------MAIN -------------------------*/
 
 main{
     margin-top: 40px;
@@ -36,68 +54,118 @@ main{
 
 
 
-/* CARDS */
+/* -----------------------------------CARDS ------------------------------------*/
+
+
+
 .mainContent{
     padding: 1rem;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     flex-wrap: wrap;
-    gap: 1rem;
-}
-
-
-.card__header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-/* .cardButton {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    background-color: #8e04aa;
-} */
-
-
-.card__header > div {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    gap: 1.5rem;
 }
 
 article.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     border: 1px solid black;
     border-radius: 5px;
-    width: 160px;
-    height: 180px;
-    padding: .3rem;
+    width: 220px;
+    height: 260px;
+    padding: 0.3rem;
     position: relative;
+    background-color: #e2d4d4;
     
-}
-
-.card__header > div > img {
-    position:relative;
-   
 }
 
 .card:hover{
     cursor: pointer;
 }
 
+.cardContainer {
+      /* background-color: #04AA6D; */
+    /* display: flex; */
+    display: grid;
+    grid-row-gap: 0px;
+    /* flex-direction: column; */
+    /* justify-content: space-around; */
+    height: 100%;
+    padding: 0.3rem;
+    border: .5px outset rgba(128, 128, 128, 0.568);
+    border-radius: 5px;
+    grid-template-rows: 1fr 1fr;
+    overflow: hidden;
+}
+
+/* >>>> CARD HEADER <<<< */
+.card__header {
+       /* display: flex; */
+    /* flex-direction: column; */
+    /* gap: 1rem; */
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    grid-template-rows: 25px 1fr;
+    /* overflow: hidden; */
+}
+
+/* .card__header > h1 {
+    position: absolute;
+} */
+
+.card__header > h3 {
+    text-transform: capitalize;
+    text-align: right;
+   /*  font-family: var(--nameFont); */
+    font-weight: 600;
+    font-size: 1.5rem;
+    
+}
+
+
+.card__header > div {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    /* padding-right: 3px; */
+    grid-column: 1/-1;
+    align-items: center;
+    /* overflow: hidden; */
+}
+
+
+
+.card__header > div > img {
+    position:absolute;
+    /* max-width: 30%; */
+    left:5px;
+    transform:scale(1.5);
+    filter: drop-shadow(1px 3px 2px #000000);
+}
+
+.card__header > div > div {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    
+}
+
+
+
+
+/* >>>>> CARD STATS <<<<< */
+
 div.card__stat {
     display: grid;
-    grid-template-columns: 55px 1fr ;
+    grid-template-columns: 40px 1fr;
     align-items: center;
     justify-items: center;
-    font-size: 0.7rem;
-
+    font-size: 0.6rem;
+    border: 1px double black;
+    border-radius: 10px;
+    padding: 0.3rem;
+    background-color: rgba(128, 128, 128, 0.568);
+    /* height: 70px; */
+    margin: 8px 13px;
 }
 
 
@@ -106,21 +174,20 @@ div.card__stat {
     width: 90%; 
     background-color: #ddd;
     text-align: end;
-    
-    
+    border-radius: 60px;
+  
 }
 
 
+.hp {height: 3px; width: 45%;max-width: 100%; background-color: #00FF00; border-radius: 60px; } 
+.attack {height: 3px;width: 49%;max-width: 100%; background-color: #f44336;border-radius: 60px;} 
+.defense {height: 3px;width: 49%;max-width: 100%; background-color: #2196F3;border-radius: 60px;}
+.speed {height: 3px;width: 45%;max-width: 100%; background-color: #f5f100;border-radius: 60px} 
+.specialAttack{height: 3px;width: 65%;max-width: 100%; background-color: #fc6a08;border-radius: 60px;}
+.specialDefense{height: 3px;width: 65%;max-width: 100%; background-color: #8e04aa;border-radius: 60px;}
 
-.hp {height: 3px; width: 45%;max-width: 100%; background-color: #04AA6D;} 
-.attack {height: 3px;width: 49%;max-width: 100%; background-color: #f44336;} 
-.defense {height: 3px;width: 49%;max-width: 100%; background-color: #2196F3;}
-.speed {height: 3px;width: 45%;max-width: 100%; background-color: #f5f100;} 
-.specialAttack{height: 3px;width: 65%;max-width: 100%; background-color: #fc6a08;}
-.specialDefense{height: 3px;width: 65%;max-width: 100%; background-color: #8e04aa;}
 
-
-/* Pokemon Files */
+/*-------------------------- POKEMON VIEWS -------------------------------------*/
 
 .mainPokeFiles > img{
     display: block;
